# comitup-watch

./: .gitignore  README.md  pytest.ini  setup.cfg  setup.py
comitup_watch/: avahi_watch.py  comitup_mon.py  dbint.py  devicemon.py  dialog.py  display.py  main.py  pingmon.py
debian/: changelog  clean  comitup-watch.links  comitup-watch.manpages  control  copyright  rules  watch
debian/patches/: 0001-Rename-the-script.patch  series
doc/: comitup-watch.1.md
test/: test_comitup_mon.py  test_ping.py
