

[metadata]
name = comitup_watch
version = 0.2
author = David Steele
author_email = steele@debian.org
url = https://davesteele.github.io/comitup-watch/
description = Monitor local Comitup-enabled devices
long_description = file: README.md
license = GPL-2
license_files = LICENSE
platform = Linux
keywords = 
    raspberry-pi
    raspberrypi
    zeroconf
    wifi
    hotspot
    bootstrap-wifi
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console :: Curses
    Framework :: Asyncio
    Intended Audience :: End Users/Desktop
    License :: OSI Approved GNU General Public License v2 or later (GPLv2+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: System :: Networking
    Typing :: Typed

[options]
include_package_data = True
packages = comitup_watch
install_requires = 
    colorama
    dbussy
    tabulate
    zeroconf
setup_requires =
    pytest-runner
tests_require = 
    pytest
    pytest-asyncio

[options.package_data]

[options.entry_points]
console_scripts =
    comitup_watch = comitup_watch.main:main

[bdist_rpm]
release = 1
packager = David Steele <steele@debian.org>
doc_files = README.md
